# So3krates-torch

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml  requirements.txt  setup.py
development_junk/: example.py  fancy_compile_test.py  md17_ethanol_small_results.npz  md17_test_small_results.npz  so3krates_reference.py  torchkrates.pth
development_junk/so3lr_torch/: hyperparameters.json
development_junk/test_calcs/: test_calc.py
development_junk/test_eval/: ensemble_test_results.npz  results.h5  test_eval.py  test_test.py
development_junk/training/: hyperparameters.json  jax_training.py  torch_training.py
example/: ala4.xyz  big_water.xyz  conversion_test.py  example.py  fancy_compile_test.py  hyperparameters.json  params.pkl  so3krates_reference.py  tensorboard_test.py  torchkrates.pth  water_1728.xyz
example/so3lr/: hyperparameters.json  torch_model_settings.yaml
example/so3lr/test2/: params.pkl
example/training/: des15k_10percent.extxyz  hyperparameters.json  jax_training.py
examples/training/: md17_ethanol_small.xyz  train_settings_example.yaml
so3krates/modules/: models.py
src/so3krates_torch/: test.py
src/so3krates_torch/blocks/: embedding.py  euclidean_transformer.py  filter_net.py  output_block.py  physical_potentials.py  radial_basis.py  so3_conv_invariants.py
src/so3krates_torch/calculator/: so3.py
src/so3krates_torch/cli/: jax_to_torch.py  run_eval.py  run_metric.py  run_test.py  run_train.py  torch_to_jax.py
src/so3krates_torch/data/: atomic_data.py  neighborhood.py  utils.py
src/so3krates_torch/modules/: cutoff.py  loss.py  models.py  spherical_harmonics.py
src/so3krates_torch/pretrained/so3lr/: settings.yaml  so3lr.model  so3lr_gpu.model
src/so3krates_torch/scripts/: simple_md.py  transform_xyz_headers.py
src/so3krates_torch/tests/: test_model.py  tests.py
src/so3krates_torch/tools/: compile.py  eval.py  finetune.py  jax_torch_conversion.py  multihead_utils.py  scatter.py  train.py  utils.py
