[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "torchkrates"
version = "0.1"
description = "Implementation of So3krates in mace-torch"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Placeholder" }
authors = [
    { name = "Tobias Henkes", email = "tobias.henkes@uni.lu" }
]
keywords = []
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
    "ase",
    "numpy",
    "mace-torch",
    "torch",
    "pyYaml",
]

[project.urls]
homepage = "https://github.com/tohenkes/So3krates-torch"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
torchkrates-jax2torch = "so3krates_torch.cli.jax_to_torch:main"
